# sample_cpp_project

./: CMakeLists.txt  benchmarks_add.cpp  main.cpp  test_add.cpp
.github/workflows/: test.yaml
